--- a/Metrics/App.config
+++ b/Metrics/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+<appSettings>
+</appSettings>
+<connectionStrings>
+  <add connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=Metricas.xls;Extended Properties='Excel 8.0;HDR=YES;'" name="ExcelCon"/>
+</connectionStrings>
 </configuration>
